--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Trayectorias Académicas</title>
+    <title>Sistema de Trayectorias Académicas</title>
     <meta charset="UTF-8" />
+    <meta name="Academia de ISC" content="Sistema de Trayectorias Académicas">
     <base href="/">
   </head>
   <body>
